@@ -218,7 +218,7 @@ class SusyNtTools
     bool hasBJet(const JetVector& jets, float weight=MV1_85);
     bool isBJet(const Susy::Jet* jet, float weight=MV1_85);
 
-    float bTagSF(const Susy::Event*, const JetVector& jets, 
+    float bTagSF(const Susy::Event*, const JetVector& jets, bool useNoJVF=false,
 		 std::string taggerName = "MV1", std::string OP="0_122", float opval=MV1_85,
 		 BTagSys sys=BTag_NOM);
 
