@@ -1,5 +1,6 @@
 # the ROOT file containing the calibration curves
-File:                 2012-Summer-rel17_MC12a.root
+File:                 2012-SummerNoJVF-rel17_MC12a.root
+
 
 # example operating points for the SV0 tagger
 # needed only for Athena tool:
