@@ -1,0 +1,9 @@
+# the ROOT file containing the calibration curves
+File:                 2012-Summer-rel17_MC12a.root
+
+
+# example operating points for the SV0 tagger
+# needed only for Athena tool:
+# SV0.operatingPoints:        5_85
+# example aliases (common to all taggers)
+aliases:            AntiKt4H1TopoAODJets->Antikt4H1Topo;AntiKt4Topo->AntiKt4Topo
